--- a/global.css
+++ b/global.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.main {
+    @apply flex flex-col flex-1 p-4;
+}
+
+.card {
+    @apply bg-white rounded-md p-4 mb-4 border border-primary-border;
+}
