move auth check

--- a/global.css
+++ b/global.css
@@ -23,5 +23,5 @@
 }
 
 .tertiary-label {
-    @apply text-sm font-medium tracking-tight text-primary-font/40
+    @apply text-sm font-medium tracking-tight text-primary-font/40;
 }
