--- a/global.css
+++ b/global.css
@@ -22,6 +22,10 @@
     @apply bg-harvest py-4 rounded-xl items-center;
 }
 
+.harvest-button-icon {
+    @apply flex-row bg-harvest rounded-md mt-5 justify-between py-2 px-4;
+}
+
 .tertiary-label {
     @apply text-sm font-medium tracking-tight text-primary-font/40;
 }
