--- a/global.css
+++ b/global.css
@@ -11,7 +11,7 @@
 }
 
 .modal-header {
-    @apply flex-row items-center justify-between border-b border-primaryborder bg-harvest/90 px-6 py-6;
+    @apply flex-row items-center justify-between border-b border-primaryborder bg-harvest px-6 py-6;
 }
 
 .harvest-button-text {
